--- a/public/styles.css
+++ b/public/styles.css
@@ -3,9 +3,10 @@ body {
 }
 
 img {
-    height: 100%; 
     width: 100%;
+    height: 100vh; 
     display: block;
+    object-fit: contain;
 }
 
 .swiper {
