--- a/public/styles.css
+++ b/public/styles.css
@@ -18,3 +18,11 @@ img {
     width: 100%;
     height: 100vh;
 }
+
+.swiper-wrapper{
+    padding-bottom: 30px;
+}
+
+.swiper-pagination {
+    bottom: 0px !important;
+}
